--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 github.client.id=8a098cac3934651491fa
 github.client.secret=a0616fdafddb2fa677b2652f1c098426010b3edb
 github.client.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.password=123
+spring.datasource.username=sa
+spring.datasource.driver-class-name=org.h2.Driver
